--- a/src/template.html
+++ b/src/template.html
@@ -16,6 +16,27 @@
     <link rel="stylesheet" href="global.css" />
     <link rel="manifest" href="manifest.json" crossorigin="use-credentials" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <title>
+      Plan Libre - Journal de la Maison de l'Architecture Occitanie-Pyrénées
+    </title>
+    <meta
+      name="description"
+      content="Journal de la Maison de l'Architecture Occitanie-Pyrénées"
+    />
+    <meta name="og:title" content="Plan Libre" />
+    <meta
+      name="og:description"
+      content="Journal de la Maison de l'Architecture Occitanie-Pyrénées"
+    />
+    <meta name="og:type" content="website" />
+    <meta name="og:image" content="favicon.png" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Plan Libre" />
+    <meta
+      name="twitter:description"
+      content="Journal de la Maison de l'Architecture Occitanie-Pyrénées"
+    />
+    <meta name="twitter:image" content="favicon.png" />
 
     <!-- Sapper generates a <style> tag containing critical CSS
 	     for the current page. CSS for the rest of the app is
