--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,12 @@
       as="font"
       crossorigin="anonymous"
     />
-
+    <link
+      rel="preload"
+      href="subset-SelfModern-Italic.woff2"
+      as="font"
+      crossorigin="anonymous"
+    />
     %sapper.base%
 
     <link rel="stylesheet" href="global.css" />
